manifests/ingress/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudops-api
  namespace: cloudops-dev
  annotations:
    kubernetes.io/ingress-class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count:
spec:
  rules:
    - host: api.apisuraj.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudops-api
                port:
                  number: 3000
